So this is not a completed version of EntityGenerator