@@ -34,6 +34,8 @@ buildscript {
     }
 
     dependencies {
+        classpath fileTree(dir: 'libs', include: ['*.jar'])
+        classpath 'commons-io:commons-io:2.5'
         classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.11'
         classpath "com.github.anuken:packr:-SNAPSHOT"
 //        classpath "com.github.Anuken.Arc:packer:$mindustryVersion"
@@ -62,6 +64,8 @@ ext {
     }
 }
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'commons-io:commons-io:2.5'
 //    compile project(":core")
 //    implementation project(":core")
     implementation "com.github.Anuken.Arc:arc-core:$mindustryVersion"
@@ -237,9 +241,33 @@ project(":core") {
     }
 }
 
+configure (project(":tools")){
+
+    tasks.withType(JavaCompile) {
+        if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
+            options.compilerArgs.addAll(['--release', '14'])
+        }
+
+        doFirst {
+//            options.compilerArgs = options.compilerArgs.findAll { it != '--enable-preview' }
+        }
+    }
+    tasks.withType(Javadoc) {
+        options {
+//            addStringOption('Xdoclint:none', '-quiet')
+            addStringOption('-release', '14')
+        }
+    }
+}
 project(":tools") {
     apply plugin: "java"
+    repositories{
+        mavenCentral()
+        maven{ url 'https://www.jitpack.io' }
+    }
     dependencies {
+        implementation fileTree(dir: 'libs', include: ['*.jar'])
+        implementation 'commons-io:commons-io:2.5'
 
         implementation project(":core")
 
